Support for more than one GCP project (audience) for the same business account added. #TOB-260
