# src/main/java/biz/turnonline/ecosystem/steward/model/Account.java
@@ -12,7 +12,7 @@
 /*
  * This code was generated by https://github.com/google/apis-client-generator/
  * (build: 2018-10-08 17:45:39 UTC)
- * on 2020-09-06 at 09:23:01 UTC
+ * on 2020-10-15 at 04:53:02 UTC
  * Modify at your own risk.
  */
 
@@ -159,6 +159,12 @@ public final class Account
      */
     @com.google.api.client.util.Key
     private java.lang.String suffix;
+
+    /**
+     * The value may be {@code null}.
+     */
+    @com.google.api.client.util.Key
+    private java.util.List<java.lang.String> supportedAudiences;
 
     /**
      * The value may be {@code null}.
@@ -525,6 +531,23 @@ public final class Account
     public Account setSuffix( java.lang.String suffix )
     {
         this.suffix = suffix;
+        return this;
+    }
+
+    /**
+     * @return value or {@code null} for none
+     */
+    public java.util.List<java.lang.String> getSupportedAudiences()
+    {
+        return supportedAudiences;
+    }
+
+    /**
+     * @param supportedAudiences supportedAudiences or {@code null} for none
+     */
+    public Account setSupportedAudiences( java.util.List<java.lang.String> supportedAudiences )
+    {
+        this.supportedAudiences = supportedAudiences;
         return this;
     }
 
